Fixed Header/Footer and Page jumps

--- a/assets/css/documents.css
+++ b/assets/css/documents.css
@@ -34,8 +34,14 @@ body {
     padding-right: 10%;
 }
 
+
 h1 {
   margin-left: 5%;
+  margin-bottom: -10%;
+}
+
+h2 {
+  padding-top: 60px;
 }
 
 a {
@@ -69,23 +75,14 @@ ol, ul {
   
 
   .navbar {
-    
-    height: 50px;
+    height: 55px;
     width: 100%;
     position: fixed;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -ms-flex-align: center;
-    align-items: center;
-    
-    background: #7FBA00;
-    color: #bbe0a2;
+    background-color: #7FBA00;
     font-weight: bold;
     z-index: 99;
     top: 0;
-
+    border-radius: 0px;
   }
 
   .navbar a {
@@ -123,7 +120,7 @@ ol, ul {
 }
 
 .sidenav>ul {
-  margin: 0;
+  margin-left: -5%;
   list-style: none;
 }
 
@@ -145,7 +142,8 @@ Collapsible Side Nav
 -------------------------------------------------------------*/
 
 .toggle_nav {
-    height: 100%;
+    height: 90%;
+    bottom: 45px;
     width: 0;
     position: fixed;
     z-index: 1;
@@ -169,8 +167,13 @@ Collapsible Side Nav
     
   }
 
+  .toggle_nav>ul {
+    list-style: none;
+  }
+
   .menu_links {
-    margin-top: 40px;
+    margin-top: 30px;
+    margin-left: -10%;
     list-style: none;
   }
 
@@ -193,7 +196,9 @@ Collapsible Side Nav
     border: none;
   }
 
-
+/*------------------------------------------------------------------
+Collapsible Menu Toggle Buttons
+------------------------------------------------------------------*/
   
 
   .openbtn, .button {
@@ -246,7 +251,7 @@ footer {
     position: fixed;
     z-index: 99;
     background-color: #eee;
-    height: 40px;
+    height: 45px;
     width: 100%;
     bottom: 0;
     left: 0;
